# pollock

./: .gitignore  LICENSE  README.md  docker-compose.yaml  login.tpl  pollock.cabal  site_key.txt  test.db  users.json
api/: README.md
app/: docker-entrypoint.sh  site_key.txt
app-backend/: README.md
app-elm/: README.md  webpack.config.js
app-elm/src/: index.ejs  index.js  styles.css
app-haste/: Dockerfile  README.md  stack.yaml
app-heist/: README.md
app-heist/snaplets/heist/templates/: base.tpl  dashboard.tpl  index.tpl  signup.tpl
app-heist/snaplets/heist/templates/channel/: view.tpl
app-heist/snaplets/heist/templates/poll/: delete.tpl
app-heist/snaplets/postgresql-simple/: devel.cfg
app-heist/src/: Main.hs
app-heist/static/js/: app.js
app-purescript/: README.md  bower.json  index.html  output.js  package-lock.json  package.json  webpack.config.js
app-purescript/src/: Main.purs
app-purescript/src/Types/: Poll.purs  User.purs
app-react/: README.md
app-react-typescript/: README.md  npm-shrinkwrap.json  package.json  tsconfig.json
app-react-typescript/src/: configureStore.ts  index.tsx  routes.tsx
app-react-typescript/src/features/editPoll/: index.ts  namespace.ts
app-react-typescript/src/features/editPoll/redux/: actions.ts  initial.ts  reducer.ts
app-react-typescript/src/features/viewPolls/: index.ts  namespace.ts
app-react-typescript/src/features/viewPolls/redux/: actions.ts  initial.ts  reducer.ts
app-react-typescript/src/modules/: index.tsx
app-react-typescript/src/modules/App/view/: App.tsx
app-react-typescript/src/modules/Polls/: Polls.tsx
app-react-typescript/src/modules/Polls/view/Layout/: Layout.styl  Layout.tsx
app-react-typescript/src/shared/api/: Api.ts
app-react-typescript/src/shared/types/: app.ts  global.ts
app-react-typescript/src/shared/view/components/Header/: index.tsx
app-react-typescript/src/shared/view/elements/Card/: Card.tsx
app-react-typescript/src/shared/view/elements/SelectInput/: SelectInput.tsx
app-react-typescript/webpack/: dev.config.js
app-reflex/: README.md  app-reflex.cabal  stack.yaml
app-reflex/app/: Main.hs
app-reflex/static/: app.css
app-snap/: README.md  channels.md  pollock.cabal
app-snap/snaplets/heist/templates/: _error.tpl  _signupsuccess.tpl  base.tpl  index.tpl
app-snap/snaplets/heist/templates/poll/: view.tpl
app-snap/src/: Db.hs  Handler.hs
app-snap/src/Types/: Channel.hs
app-snap/static/css/: app.css  pollock-common.css
app-yesod/: README.md
app/snaplets/heist/templates/: login.tpl  signup.tpl
app/snaplets/heist/templates/poll/: new.tpl
app/snaplets/heist/templates/polls/: new.tpl
app/snaplets/postgresql-simple/: devel.cfg
app/src/: #Db.hs#  .#Db.hs  Handler.hs  Main.hs
app/static/css/: app.css
db/: create.sql
docs/: README.md
nginx/: Dockerfile  README.md  default.conf  docker-entrypoint.sh  nginx.conf
nginx/conf/: admin.adscout.conf  plydis.kelecorix.com.conf  pollock.rocks.conf
nginx/conf_/: plydis.kelecorix.com.conf
nginx/keys/: dhparam2048.pem
nginx/keys/plydis.kelecorix/: fullchain.pem  privkey.pem
nginx/keys/pollock.rocks/: fullchain.pem  privkey.pem
nginx/www/: index.html
nginx/www/.well-known/acme-challenge/: *scratch*  2U8Cl20RzXakZ0MGsJvdMhHU3fZLXNHNhfNOGMGPv-s  2a4saLs1UoqzMGqDI-yvrDDoMtYJJ0kgG05ZMrqtHOg  5BnvT6cD9xcQ8B-0tRhcxLjFbMOKF6FZ0680OGxV4gU  6S-zM8GVohBOYwrTtutmPL1wpOlhu_lXRyx9tn_6Ehg  8C9tUO5Yt7r1OALky-raaDmrwN19l-zv-7k9bghtB24  BRz4mAdRhho7Z2rTDnvMedb6InRqz4maiokrtt4g4vs  DVh_3wNQoU_N_KGVX_q3yeWC9SRiSC0dSw8O09jwza8  EENLl4w4vZlyQ01AFc_Eq2IsUqNyAzMkOX6Hoz6fu7Y  GZ3y1_13wPUaoXB1RcEmla8aCp7WR4YPzKSLVGdJ5zk  HftvH6H_MH8eUwQ7gJaWLRGnnLAodcrVrexjJShsAcA  KFGzY7PjTKNiijeyZFzUTCB2TrTu7cAorNJ9JcxIbsc  LrQpbcg0sZnAlL2xgybk7vkUhv8_4QBxAaaFRjLtOyY  MQN_ortTNr1YhBcYK4KXR-UKtOek2dg58Nz_n-wyofI  O0eF7EXbvRnxM3nV7M9C3fI7CqG7IFXAwH-3VQ_1a2w  OFENqSpsdsT5U23IYpLxcSTiyJ8vUE3GdQxU0_ik7G4  ShLD_1rV_rgGXnT-YyYz-ylsZkAHSPHL-m2zaYIO-tI  Ualqq3W7fIlQAnDOfqqbzCuftfikqaCBh3bIkaAgiPQ  VKmNx-xOdeIGV_dcM7iXslVFr5vQSELWHfTQyrZvC-s  VlcleQQ5D8kE5C9kYLUnTV8pxeTbw0q_OjXEnStAho0  VrhrA1QFPiL9MzweltMmwpPsHZrpbA2vsoFwxEYdMrI  X8dU9N5xbdtF1HZiOPiIlmdNIpNkMYMz0RU0Ll6Z_UM  aij0aD9kmblscwoZO9JZD3DOhqNH2_yzyTpGfz5Qryo  cbWPi6iBKskBDLlVgVSvY7R0J8HkRp6Sz3eKe8zYVPo  dwK2hHAQzO8WShUs3wvT7MjlLrWrqVM_dXwpfdS2vYs  dyAk6015M1sQL3tkoglwb98R6rCZs_6rRj3jXGY-RXw  ePCgrDEtNAvxSTVK3ngdfBi9C8eX8JtkeiD3Iu0U7O4  puW40nn8XqyvQ3LGgE97xGDi1DKznSW-x-xPqGX1odk  vmH-rb9kQHMmwlvRAfuEiDAyTAYvXxGZpF8njYb1Uag  zLGppNqurAY7zV1OLvJ8tNwmpX55NiLIuL37xvbbx2Q
nginx/www/static/css/: app.css  app.css~
nginx/www/static/js/: adTag.js  adTag2.js  app.js  onload.js  onload2.js  scrolling-nav.js  tag.js  toLoad.js  toLoad2.js
shared/: README.md
snaplets/heist/templates/: base.tpl  index (copy).tpl~  index.tpl  login.tpl
snaplets/heist/templates/poll/: new.tpl  new.tpl~  view.tpl~
snaplets/heist/templates/polls/: new.tpl~
snaplets/heist/templates/user/: settings.tpl
snaplets/sqlite-auth/: devel.cfg
snaplets/sqlite-simple/: devel.cfg
src/: #Main.hs#  .#Main.hs  Application.hs  Db.hs  Db.hs~  Handler.hs  Main.hs
src/Types/: Poll.hs
static/css/: app.css
(+11 files in other folders)
