name:                pollock
version:             0.1.5.0
synopsis:            social voting application
-- description:         
homepage:            pollock.io
license:             LGPL-3
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag development
  description: Whether to build the server in development (interpreted) mode
  default: False

executable pollock
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Application
                     , Db
  build-depends:       base
               ,       snap
               ,       snap-core
               ,       snaplet-sqlite-simple
               ,       snap-loader-static
               ,       text
               ,       lens
               ,       heist
               ,       bytestring
               ,       sqlite-simple
               ,       time
               ,       transformers
  Extensions: OverloadedStrings
            , TemplateHaskell
  GHC-options: -threaded -O2
  default-language:    Haskell2010

  if flag(development)
    cpp-options: -DDEVELOPMENT
    ghc-options: -w
    build-depends:
      snap-loader-dynamic