name:                pollock
version:             0.1.5.0
synopsis:            social voting application
description:         WebApp impemented in SNap
homepage:            pollock.io
license:             MIT
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Sergey Bushnyak, Kelecorix, Inc;         
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag development
  description: Whether to build the server in development (interpreted) mode
  default: False

executable pollock
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Application
                     , Db
                     , Handler
                     , Types.Poll
                     , Types.Channel

  build-depends:       base
               ,       snap
               ,       snap-core
               ,       snaplet-postgresql-simple
               ,       snap-loader-static
               ,       snap-server
               ,       text
               ,       lens
               ,       heist
               ,       aeson
               ,       aeson-lens
               ,       bytestring
               ,       time
               ,       servant                >= 0.6
               ,       servant-snap
               ,       snaplet-postgresql-simple
               ,       postgresql-simple
               ,       blaze-builder
               ,       uuid
               ,       jmacro
               ,       text
               ,       lens
               ,       bytestring
               ,       time
               ,       mtl
               ,       transformers >= 0.5.0.0
               ,       template-haskell
               ,       utf8-string >= 1.0.1.1
               ,       unordered-containers
               ,       split
               ,       map-syntax
               ,       containers
               ,       safe
               ,       http-types
               ,       http-client
               ,       random
               ,       text-format
               ,       tuple
               ,       MissingH
               ,       data-default
  Extensions:    OverloadedStrings
               , TemplateHaskell

  GHC-options: -threaded -O2
  default-language:    Haskell2010

  if flag(development)
    cpp-options: -DDEVELOPMENT
    ghc-options: -w
    build-depends:
      snap-loader-dynamic